--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -154,7 +154,8 @@
     }
 
 
-    @include respond(tab-port) {
+    @media only screen and (max-width: 56.25em),
+        only screen and (hover:none) {
         background-color: $colour-white;
         border-radius: $default-border-radius;
         box-shadow: 0 1.5rem 4rem rgba($colour-black, .15);
